# reosapp

./: .gitignore  Makefile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/reos-skills/.claude/skills/navigate-thread/: SKILL.md
src-tauri/resources/reos-skills/.claude/skills/summarize-paper/: SKILL.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  extract.rs  finder.rs  mod.rs  rebuild_cache.rs
src/lib/: arxiv.ts  stores.svelte.ts  summary-bulk.svelte.ts  summary-meta.ts  theme.svelte.ts  types.ts  version.ts  vocabulary.ts
src/lib/components/: AddPaperModal.svelte  Breadcrumbs.svelte  BulkSummaryModal.svelte  CommandPalette.svelte  FirstRunWizard.svelte  GraphView.svelte  NewThreadModal.svelte  PaperCard.svelte  PaperChat.svelte  PaperSummary.svelte  PaperTabs.svelte  PdfViewer.svelte  QuickOpenModal.svelte  Sidebar.svelte  ThreadChat.svelte
src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Dialog.svelte  Input.svelte  (+3 more)
src/lib/graph/: build.ts
src/lib/stores/: summary-jobs.svelte.ts
src/lib/tauri/: arxiv.ts  chat.ts  config.ts  db.ts  extract.ts  fs.ts  rebuild.ts  shell.ts  stream.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/archive/: +page.svelte
src/routes/graph/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/threads/: +page.svelte
(+3 files in other folders)
